<layout>

    <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:behavior_hideable="false"
        app:behavior_peekHeight="?attr/actionBarSize"
        app:cardElevation="@dimen/evevation"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/top_corner_primary_bg"
                android:orientation="vertical"
                android:padding="@dimen/padiding">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/CustomLargeDarkTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingRight="@dimen/margin_small"
                        android:paddingBottom="@dimen/margin_small"
                        android:text="@string/filter_by" />

                    <ImageView
                        android:id="@+id/cancelButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/padiding"
                        android:paddingTop="@dimen/padding_small"
                        android:paddingRight="@dimen/padding_small"
                        android:paddingBottom="@dimen/padding_small"
                        android:src="@drawable/ic_cancel_black_24dp">

                    </ImageView>

                </androidx.appcompat.widget.LinearLayoutCompat>


                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/CustomMediumDarkTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin"
                    android:text="@string/crime_name"></androidx.appcompat.widget.AppCompatTextView>

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/cimeNameEt"
                    style="@style/EditRegularFillStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:hint="@string/type"
                    android:imeOptions="actionNext"
                    android:inputType="text"></androidx.appcompat.widget.AppCompatEditText>

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/CustomMediumDarkTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin"
                    android:text="@string/crime_location"></androidx.appcompat.widget.AppCompatTextView>

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/crimeLocationEt"
                    style="@style/EditRegularFillStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:hint="@string/type"
                    android:imeOptions="actionNext"
                    android:inputType="text"></androidx.appcompat.widget.AppCompatEditText>

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/CustomMediumDarkTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin"
                    android:text="@string/crime_city"></androidx.appcompat.widget.AppCompatTextView>

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/crimeCityEt"
                    style="@style/EditRegularFillStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:hint="@string/type"
                    android:imeOptions="actionNext"
                    android:inputType="text"></androidx.appcompat.widget.AppCompatEditText>

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/CustomMediumDarkTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin"
                    android:text="@string/crime_type"></androidx.appcompat.widget.AppCompatTextView>

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/crimeTypeEt"
                    style="@style/EditRegularFillStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:drawableRight="@drawable/ic_keyboard_arrow_down_black_24dp"
                    android:focusable="false"
                    android:hint="@string/type"
                    android:imeOptions="actionDone"
                    android:inputType="none"></androidx.appcompat.widget.AppCompatEditText>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/submitButton"
                    style="@style/CustomPrimaryButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin"
                    android:text="@string/submit">

                </androidx.appcompat.widget.AppCompatButton>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </ScrollView>

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>