<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="vm"
            type="com.ssas.tpcms.android.repo.auth.AuthVM" />
    </data>
    <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.auth.VerifuDeviceIdActivity">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/CustomLargeDarkTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/padiding"
            android:text="@string/verify_user_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </androidx.appcompat.widget.AppCompatTextView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/deviceIdText"
                    style="@style/CustomMediumDarkTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_x_large"
                    android:layout_marginTop="@dimen/margin_x_large"
                    android:layout_marginRight="@dimen/margin_x_large"
                    android:text="@string/device_id">

                </androidx.appcompat.widget.AppCompatTextView>

                <androidx.appcompat.widget.AppCompatEditText
                    android:text="@={vm.deviceId}"
                    android:id="@+id/deviceId"
                    style="@style/EditRegularFillStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/deviceIdText"
                    android:layout_marginLeft="@dimen/margin_x_large"
                    android:layout_marginTop="@dimen/margin_small"
                    android:layout_marginRight="@dimen/margin_x_large"
                    android:imeOptions="actionDone"
                    android:inputType="text">

                </androidx.appcompat.widget.AppCompatEditText>


                <androidx.appcompat.widget.AppCompatButton
                    android:onClick="@{()->vm.onDeviceIdSubmitClick()}"
                    android:id="@+id/sumbitDeviceIdBt"
                    style="@style/CustomPrimaryButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:text="@string/verify_now">

                </androidx.appcompat.widget.AppCompatButton>
            </RelativeLayout>
        </ScrollView>

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>